hphp/hack/test/typecheck/reactive/rx_flavored_functions2.php.exp
File "rx_flavored_functions2.php", line 12, characters 13-34:
Invalid argument (Typing[4203])
  File "rx_flavored_functions2.php", line 5, characters 13-40:
  This function is shallow reactive.
  File "rx_flavored_functions2.php", line 12, characters 13-34:
  This function is local reactive.
